--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Sedona</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
+	<script src="svgxuse.min.js" defer></script>
+	<script src="picturefill.min.js" defer></script>
 	<link rel="stylesheet" href="styles/style-min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 </head>
@@ -38,7 +40,7 @@
 				<button class="button site-navigat-button"></button>
 			</nav>
 			<div class="slogan">
-				<img class="slogan__image" src="images/slogan.svg" width="280" height="213" alt="слоган &#171;Седоны&#187;">
+					<img class="slogan__image" src="images/slogan.svg" alt="слоган &#171;Седоны&#187;">
 				<div class="slogan__decoration"></div>
 			</div>
 		</header>
@@ -92,7 +94,9 @@
 
 				<div class="advantages-primary">
 					<div class="advantages-conception advantages-conception--bridge">
-						<h3 class="advantages-conception__heading">Там есть мост Дьявола</h3>
+						<h3 class="advantages-conception__heading advantages-conception__heading--bridge">
+							Там есть <br> мост Дьявола
+						</h3>
 						<span class="advantages-conception__number">№2</span>
 						<p class="advantages-conception__description">Да, по нему можно пройти! Если Вы осмелитесь, конечно
 						</p>
@@ -108,7 +112,9 @@
 
 				<ul class="advantages-another">
 					<li class="advantages-conception advantages-another__advantages-conception">
-						<h3 class="advantages-conception__heading">Небольшая площадь</h3>
+						<h3 class="advantages-conception__heading advantages-conception__heading--square">
+							Небольшая площадь
+						</h3>
 						<span class="advantages-conception__number">№3</span>
 						<p class="advantages-conception__description">Все интересные места находятся очень близко</p>
 					</li>
@@ -130,7 +136,10 @@
 				<p class="search-hotel__declaration">Укажите предполагаемые даты поездки,<br> и мы покажем Вам лучшие
 					предложения гостиниц в Седоне</p>
 				<form class="search-hotel__form" action="http://example.com/" method="get">
-					<button class="button button--blue search-hotel__button" name="search-hotel">найти гостиницу</button>
+					<button class="button button--blue search-hotel__button" name="search-hotel"
+								type="button">
+						найти гостиницу
+					</button>
 				</form>
 			</section>
 
@@ -159,8 +168,8 @@
 					<li class="social-links__item">
 						<a class="social-links__link" href="https://twitter.com">
 							<p class="social-links__svg-box">
-								<svg width="18" height="14">
-									<use xlink:href="images/twitter.svg#twitter"></use>
+								<svg width="20" height="16">
+									<use xlink:href="images/twitter_2.svg#twitter"></use>
 								</svg>
 							</p>
 						</a>
@@ -169,8 +178,8 @@
 					<li class="social-links__item">
 						<a class="social-links__link" href="https://www.facebook.com">
 							<p class="social-links__svg-box">
-								<svg width="9" height="18">
-									<use xlink:href="images/facebook.svg#facebook"></use>
+								<svg width="9" height="23">
+									<use xlink:href="images/facebook_2.svg#facebook"></use>
 								</svg>
 							</p>
 						</a>
@@ -178,25 +187,27 @@
 					</li>
 					<li class="social-links__item">
 						<a class="social-links__link" href="https://www.youtube.com">
-							<p class="social-links__svg-box">
-								<svg width="20" height="14">
-									<use xlink:href="images/youtube.svg#youtube"></use>
+							<p class="social-links__svg-box"> 
+								<svg width="24" height="18">
+									<use xlink:href="images/youtube_2.svg#youtube"></use>
 								</svg>
-							</p>
+							</p> 
 						</a>
 						<span class="visually-hidden">Ютуб</span>
 					</li>
 				</ul>
 			</div>
 
-			<p class="copyright site-footer__copyright">
-				<span class="copyright__text">Разработано</span>
-				<a class="copyright__link" href="https://htmlacademy.ru">
-					<svg width="27" height="34">
-						<use xlink:href="images/htmlacademy.svg#htmlacademy"></use>
-					</svg>
-				</a>
-			</p>
+			<div class="copyright site-footer__copyright">
+				<p class="copyright__text">
+					<span>Разработано</span>
+					<a class="copyright__link" href="https://htmlacademy.ru">
+						<svg width="27" height="34">
+							<use xlink:href="images/htmlacademy.svg#htmlacademy"></use>
+						</svg>
+					</a>
+				</p>
+			</div>
 
 
 		</footer>
