--- a/photo.html
+++ b/photo.html
@@ -6,6 +6,8 @@
 	<title>Sedona</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
+	<script src="svgxuse.min.js" defer></script>
+	<script src="picturefill.min.js" defer></script>
 	<link rel="stylesheet" href="styles/style-min.css">
 	<link rel="stylesheet" href="css/normalize.css">
 </head>
@@ -72,7 +74,7 @@
 							<div class="photos__likes photos__likes--large">
 								<button class="button photos__button-like" type="button">
 									<svg width="24" height="22">
-										<use xlink:href="images/like-icon.svg#like-icon"></use>
+										<use xlink:href="images/like-icon_2.svg#like-icon"></use>
 									</svg>
 								</button>
 								<span class="photos__amount-like">1350</span>
@@ -96,7 +98,7 @@
 							<div class="photos__likes">
 								<button class="button photos__button-like" type="button">
 									<svg width="24" height="22">
-										<use xlink:href="images/like-icon.svg#like-icon"></use>
+										<use xlink:href="images/like-icon_2.svg#like-icon"></use>
 									</svg>
 								</button>
 								<span class="photos__amount-like">143</span>
@@ -119,7 +121,7 @@
 							<div class="photos__likes">
 								<button class="button photos__button-like" type="button">
 									<svg width="24" height="22">
-										<use xlink:href="images/like-icon.svg#like-icon"></use>
+										<use xlink:href="images/like-icon_2.svg#like-icon"></use>
 									</svg>
 								</button>
 								<span class="photos__amount-like">96</span>
@@ -142,7 +144,7 @@
 							<div class="photos__likes">
 								<button class="button photos__button-like" type="button">
 									<svg width="24" height="22">
-										<use xlink:href="images/like-icon.svg#like-icon"></use>
+										<use xlink:href="images/like-icon_2.svg#like-icon"></use>
 									</svg>
 								</button>
 								<span class="photos__amount-like">254</span>
@@ -180,7 +182,7 @@
 						<div class="controls__operations">
 							<button class="button controls__button controls__button-replay" type="button">
 								<svg width="16" height="20">
-									<use xlink:href="images/replay.svg#replay"></use>
+									<use xlink:href="images/replay_2.svg#replay"></use>
 								</svg>
 							</button>
 							<input class="controls__range controls__range--operations" type="range" name="range-video" min="0"
@@ -188,7 +190,7 @@
 
 							<button class="button controls__button controls__button-subtitles" type="button">
 								<svg width="32" height="20">
-									<use xlink:href="images/subtitles.svg#subtitles"></use>
+									<use xlink:href="images/subtitles_2.svg#subtitles"></use>
 								</svg>
 							</button>
 							<button class="button controls__button controls__button-fullscreen" type="button">
@@ -211,8 +213,8 @@
 					<li class="social-links__item">
 						<a class="social-links__link" href="https://twitter.com">
 							<p class="social-links__svg-box">
-								<svg width="18" height="14">
-									<use xlink:href="images/twitter.svg#twitter"></use>
+								<svg width="20" height="16">
+									<use xlink:href="images/twitter_2.svg#twitter"></use>
 								</svg>
 							</p>
 						</a>
@@ -221,8 +223,8 @@
 					<li class="social-links__item">
 						<a class="social-links__link" href="https://www.facebook.com">
 							<p class="social-links__svg-box">
-								<svg width="9" height="18">
-									<use xlink:href="images/facebook.svg#facebook"></use>
+								<svg width="9" height="23">
+									<use xlink:href="images/facebook_2.svg#facebook"></use>
 								</svg>
 							</p>
 						</a>
@@ -231,8 +233,8 @@
 					<li class="social-links__item">
 						<a class="social-links__link" href="https://www.youtube.com">
 							<p class="social-links__svg-box">
-								<svg width="20" height="14">
-									<use xlink:href="images/youtube.svg#youtube"></use>
+								<svg width="24" height="18">
+									<use xlink:href="images/youtube_2.svg#youtube"></use>
 								</svg>
 							</p>
 						</a>
@@ -241,14 +243,16 @@
 				</ul>
 			</div>
 
-			<p class="copyright site-footer__copyright">
-				<span class="copyright__text">Разработано</span>
-				<a class="copyright__link" href="https://htmlacademy.ru">
-					<svg width="27" height="34">
-						<use xlink:href="images/htmlacademy.svg#htmlacademy"></use>
-					</svg>
-				</a>
-			</p>
+			<div class="copyright site-footer__copyright">
+				<p class="copyright__text">
+					<span>Разработано</span>
+					<a class="copyright__link" href="https://htmlacademy.ru">
+						<svg width="27" height="34">
+							<use xlink:href="images/htmlacademy.svg#htmlacademy"></use>
+						</svg>
+					</a>
+				</p>
+			</div>
 		</footer>
 	</div>
 
